[gd_scene load_steps=7 format=3 uid="uid://b2l66svymsbhn"]

[ext_resource type="Texture2D" uid="uid://ddo6yqaeg6obg" path="res://graphics/black_circle_scribble.png" id="1_4m46i"]
[ext_resource type="Script" path="res://scenes/GUI/game_over_screen.gd" id="1_p0h60"]
[ext_resource type="Script" path="res://scenes/GUI/ButtonStyle.gd" id="2_3bdgy"]
[ext_resource type="Script" path="res://scenes/GUI/RestartButton.gd" id="3_2ub8l"]

[sub_resource type="LabelSettings" id="LabelSettings_m0hhv"]
font_size = 128
font_color = Color(1, 0.478431, 0.478431, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ii0hi"]
font_size = 48

[node name="GameOverScreen" type="CanvasLayer"]
script = ExtResource("1_p0h60")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -45.5
offset_bottom = 45.5
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_m0hhv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="QuitButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
modulate = Color(0.988235, 0.988235, 0.988235, 1)
layout_mode = 2
texture_normal = ExtResource("1_4m46i")
stretch_mode = 0
script = ExtResource("2_3bdgy")

[node name="QuitLabel" type="Label" parent="VBoxContainer/HBoxContainer/QuitButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -8.0
offset_right = 20.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
text = "QUIT"
label_settings = SubResource("LabelSettings_ii0hi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_4m46i")
script = ExtResource("3_2ub8l")

[node name="RestartLabel" type="Label" parent="VBoxContainer/HBoxContainer/RestartButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.5
offset_top = -32.0
offset_right = 109.5
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
text = "RESTART"
label_settings = SubResource("LabelSettings_ii0hi")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_up" from="VBoxContainer/HBoxContainer/QuitButton" to="VBoxContainer/HBoxContainer/QuitButton" method="_on_button_up"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/QuitButton" to="VBoxContainer/HBoxContainer/QuitButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer/QuitButton" to="VBoxContainer/HBoxContainer/QuitButton" method="_on_mouse_exited"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/RestartButton" to="VBoxContainer/HBoxContainer/RestartButton" method="_on_button_up"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/RestartButton" to="VBoxContainer/HBoxContainer/RestartButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer/RestartButton" to="VBoxContainer/HBoxContainer/RestartButton" method="_on_mouse_exited"]
